<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorites_fragment">Favorites Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_fragment">Profile Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_app_fragment">About App Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobilenumber">Mobile No</string>
    <string name="address">Address</string>
    <string name="check_internet">Check Internet</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
</resources>
